--- a/Moves/style.css
+++ b/Moves/style.css
@@ -1,4 +1,4 @@
-.line {
+#line {
     height: 50px;
     width: 50px;
     background-color: red;
@@ -12,8 +12,8 @@
     align-items: center;
     
 }
-
-.circle {
+ 
+#circle {
     height: 50px;
     width: 50px;
     background-color: red;
@@ -25,6 +25,18 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 75px;
+}
+
+#square {
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
 }
 
 .buttonStyle {
