--- a/Moves/style.css
+++ b/Moves/style.css
@@ -18,12 +18,6 @@
     width: 50px;
     background-color: red;
     border-radius: 25px;
-    color: white;
-    font-size: 11px;
-    font-family: fantasy;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     margin-top: 75px;
 }
 
@@ -37,6 +31,27 @@
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
+    transform: translate(0px, 0px);
+}
+
+#pCircle{
+    position: absolute;
+    color: white;
+    font-size: 10px;
+    margin: 0px;
+}
+
+#pLine{
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    margin-top: -16px;
+}
+
+#pSquare{
+    color: white;
+    font-size: 10px;
+    margin-top: 45px;
 }
 
 .buttonStyle {
@@ -56,6 +71,7 @@
     border-radius: 5px;
     width: 450px;
     border-color: #ce5a19;
+    margin-top: 20px;
 }
 
 .secCircle {
@@ -78,6 +94,18 @@
     position: absolute;
     margin: 50px 21px 21px 50px;
     border-color: #ce5a19;
+}
+
+.LineSquare{
+    border: solid;
+    width: 400px;
+    height: 100px;
+    text-align: -webkit-center;
+    position: absolute;
+    margin: 25px 21px 21px 25px;
+    border-color: #ce5a19;
+    border-width: 1px;
+    border-radius: 5px;
 }
 
 section {
