--- a/Moves/style.css
+++ b/Moves/style.css
@@ -38,21 +38,17 @@
 #pCircle{
     position: absolute;
     color: white;
-    font-size: 10px;
-    margin: 0px;
+    font-size: 12px;
 }
 
 #pLine{
     color: white;
-    font-size: 10px;
-    position: absolute;
-    margin-top: -30px;
+    font-size: 12px;
 }
 
 #pSquare{
     color: white;
-    font-size: 10px;
-    margin-top: 100px;
+    font-size: 12px;
 }
 
 .hrLine{
@@ -62,8 +58,10 @@
 
 .buttonStyle {
     color: white;
-    background-color: blueviolet;
-    border: none;
+    background-color: rgb(19,19,19);
+    border: solid;
+    border-color: blueviolet;
+    border-width: 1px;
     font-family: monospace;
     font-size: 18px;
     border-radius: 5px;
@@ -72,12 +70,14 @@
 
 .buttonSpeed {
     color: rgb(254, 254, 254);
-    background-color: rgb(228, 8, 8);
-    border: none;
-    font-family: monospace;
+    background-color: rgb(19,19,19);
+    border: solid;
+    border-color: rgb(228, 8, 8);
+    border-width: 1px;
     font-size: 18px;
     border-radius: 5px;
-    padding: 3px;
+    height: 30px;
+    width: 30px;
 }
 
 .secline {
@@ -92,7 +92,8 @@
     width: 200px;
     height: 200px;
     text-align: -webkit-center;
-    border-color: rgb(19,19,19);;
+    border-color: rgb(19,19,19);
+    padding-top: 35px;
 }
 
 .circleInternal {
@@ -117,6 +118,17 @@
     border-color: #ce5a19;
     border-width: 1px;
     border-radius: 5px;
+}
+
+.BoxSpeed {
+    margin: 5px 0px 5px 0px;
+}
+
+h3{
+    margin: 5px 5px 5px 5px;
+    display: inline; 
+    font-family: monospace;
+    color: #00ff66;
 }
 
 section {
