--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -1,13 +1,30 @@
+body{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .container{
     background-color: rgb(45, 45, 45);
     color: white;
 }
 
 .perfil{
-    text-align: center;
-    background-color: rgb(142, 1, 1);
-    padding-top: 5em;
-    border-bottom-right-radius: 5px;
+    display: block;
+    padding: 7px;
+    position: relative;
+    border-bottom: 1px solid rgb(255 255 255);
+}
+
+.perfil-img{
+    width: 46%;
+    height: 190px;
+    margin: 0 auto; 
+}
+
+.perfil img{
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
 }
 
 .titulosH4{
@@ -29,12 +46,6 @@
     color: white;
     list-style: none;
     transition: .2s;
-}
-
-.contatos:hover div{
-    color: white;
-    text-shadow: 0 0 7px #f4e803,
-                 0 0 30px #f4e803;
 }
 
 .container:hover div {
@@ -119,8 +130,12 @@
     padding: 0.5rem 1rem;
     color: #ffffff;
     text-decoration: none;
+    text-align: justify;
 }
 
+.lista p {
+    text-indent: 40px;
+}
 
 /* tooltips */
 
@@ -185,18 +200,4 @@
   
 h5:focus + .tool-tip .tool-tip__info {
     display: inline-block;
-}
-
-.modal-title,
-.modal-body{
-    color: rgb(41, 41, 41) !important;
-}
-
-.modal-dialog {
-    max-width: 650px !important;
-    text-align: justify;
-}
-
-.modal{
-    background-color: #00a3ff1c;
 }
